--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,11 @@
   "dependencies": {
     "@azure/functions": "4.3.0",
     "@remix-run/node": "2.8.1",
-    "@scandinavianairlines/remix-azure-functions": "1.0.1"
+    "@remix-run/react": "2.8.1",
+    "@scandinavianairlines/remix-azure-functions": "1.0.1",
+    "isbot": "5.1.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "azure-functions-core-tools": "4.0.5571"
